style the player and search browse all

--- a/src/assets/styles/cmps/AppFooter.scss
+++ b/src/assets/styles/cmps/AppFooter.scss
@@ -7,6 +7,10 @@
   max-height: em(70px);
   height: 100%;
   width: 100%;
+  border-radius: em(7px);
+  align-self: center;
+  padding: em(1px);
+  padding-right: em(15px);
 
   margin: 0;
 }
