--- a/src/assets/styles/cmps/FullPlayer.scss
+++ b/src/assets/styles/cmps/FullPlayer.scss
@@ -25,6 +25,7 @@
       max-height: inherit;
     }
     .player-actions {
+      display: flex;
       grid-column: 3;
       max-height: inherit;
     }
