--- a/src/assets/styles/cmps/GenreList.scss
+++ b/src/assets/styles/cmps/GenreList.scss
@@ -1,7 +1,17 @@
 .genre-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(260px, 0.9fr));
-  grid-auto-rows: repeat(auto-fill, minmax(158px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(130px, 0.9fr));
+  grid-auto-rows: repeat(auto-fill, minmax(100px, 1fr));
   justify-content: center;
   gap: 1em;
+}
+
+@include for-normal-layout {
+  .genre-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(260px, 0.9fr));
+    grid-auto-rows: repeat(auto-fill, minmax(158px, 1fr));
+    justify-content: center;
+    gap: 1em;
+  }
 }
