--- a/src/assets/styles/cmps/VolumeBar.scss
+++ b/src/assets/styles/cmps/VolumeBar.scss
@@ -5,6 +5,9 @@
   display: flex;
   align-items: center;
 
+  margin-left: em(3px);
+  margin-right: em(3px);
+
   .volume-bar-track {
     color: #fff;
   }
