--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -12,6 +12,7 @@
     position: fixed;
     bottom: 0;
     width: 100%;
+    height: fit-content;
 
     .app-footer {
       background-color: red;
