--- a/src/assets/styles/views/StationPage.scss
+++ b/src/assets/styles/views/StationPage.scss
@@ -1,6 +1,8 @@
 .station-page-container {
   height: 100%;
   padding: 0;
+  width: 100%;
+  position: relative;
   .app-header {
     padding: 1em;
   }
