--- a/src/assets/styles/cmps/Player.scss
+++ b/src/assets/styles/cmps/Player.scss
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: space-between;
     position: fixed;
+    width: 100%;
     .time-bar {
       width: 100%;
       padding: 0;
