--- a/src/assets/styles/views/SearchPage.scss
+++ b/src/assets/styles/views/SearchPage.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  position: relative;
+
   .app-header-container {
     .app-header {
       background-color: $sec-bg-clr;
