minor style changes

--- a/src/assets/styles/cmps/StationHeader.scss
+++ b/src/assets/styles/cmps/StationHeader.scss
@@ -143,7 +143,7 @@
         flex-direction: column;
         align-items: start;
         justify-content: end;
-        gap: 0;
+        gap: 0.3em;
 
         .station-type {
           font-size: 0.5em;
