--- a/src/assets/styles/cmps/MinimalSong.scss
+++ b/src/assets/styles/cmps/MinimalSong.scss
@@ -3,6 +3,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: start;
+  position: relative;
 
   overflow: hidden;
   flex-wrap: nowrap;
