--- a/src/assets/styles/cmps/Player.scss
+++ b/src/assets/styles/cmps/Player.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   width: 100%;
   align-items: center;
+  position: relative;
   .player-controls {
     display: none;
   }
@@ -11,6 +12,7 @@
     justify-content: space-between;
     position: fixed;
     width: 100%;
+    position: relative;
     .time-bar {
       width: 100%;
       padding: 0;
@@ -47,6 +49,11 @@
         &:hover {
           svg {
             fill: #fff;
+          }
+        }
+        &.active {
+          svg {
+            fill: $logo-clr;
           }
         }
       }
