--- a/src/assets/styles/views/HomePage.scss
+++ b/src/assets/styles/views/HomePage.scss
@@ -2,6 +2,11 @@
   display: flex;
   flex-direction: column;
   padding: em(15px);
-  width: 100%;
-  position: relative;
+}
+
+@include for-normal-layout {
+  .home-page {
+    width: 100%;
+    position: relative;
+  }
 }
