--- a/src/assets/styles/cmps/AppFooter.scss
+++ b/src/assets/styles/cmps/AppFooter.scss
@@ -4,15 +4,17 @@
   justify-content: center;
   align-items: start;
   max-height: em(70px);
+  min-height: em(45px);
   height: 100%;
-  width: 100%;
+  width: 95%;
   border-radius: em(7px);
   align-self: center;
   padding: em(1px);
-  padding-right: em(15px);
   background-color: #454a44;
+  position: relative;
 
-  margin: 0;
+  margin-right: 1000px;
+  margin-left: 10px;
 }
 
 @include for-normal-layout {
