fix app footer size on normal layout and style active song in station page

--- a/src/assets/styles/cmps/AppFooter.scss
+++ b/src/assets/styles/cmps/AppFooter.scss
@@ -19,6 +19,9 @@
 
 @include for-normal-layout {
   .app-footer {
+    width: 100%;
+    margin-right: 0;
+    margin-left: 0;
     background-color: $main-bg-clr;
   }
 }
