Add route for library. style -will do later..

--- a/src/assets/styles/cmps/Library.scss
+++ b/src/assets/styles/cmps/Library.scss
@@ -1,6 +1,22 @@
-.library-container {
-  display: none;
+.nav-bar {
+  .library-container {
+    display: none;
+  }
 }
+
+.library-container {
+  display: flex;
+  flex-direction: column;
+  // justify-content: stretch;
+
+  .icon-lable-div {
+    display: none
+  }
+
+}
+
+
+
 
 @include for-normal-layout {
   .library-container {
