--- a/src/assets/styles/cmps/StationsMenu.scss
+++ b/src/assets/styles/cmps/StationsMenu.scss
@@ -1,5 +1,5 @@
 .stations-menu-container {
-  position: absolute;
+  position: fixed;
   background: #242424;
   box-shadow: 0 16px 24px rgba(0, 0, 0, 0.5);
   border-radius: 8px;
