add indicator that song is playing from station page

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -85,6 +85,7 @@
     overflow-y: auto;
     border-radius: 8px;
     background-color: $sec-bg-clr;
+    min-width: 60vw;
 
     .main-container-bg {
       transition: background-image 2s ease;
