--- a/src/assets/styles/cmps/SongList.scss
+++ b/src/assets/styles/cmps/SongList.scss
@@ -1,6 +1,6 @@
 .song-list {
   list-style-type: none;
-  padding: em(10px);
+  padding: 10px;
   margin: 0;
 
   .song-header,
@@ -8,28 +8,33 @@
     display: grid;
     grid-template-columns: 0.3fr 8fr 2fr;
     align-items: center;
-    padding: em(10px);
-    gap: em(20px);
+    padding: 10px;
+    gap: 20px;
 
     .song-order,
     .song-date-added,
     .song-duration {
       text-align: left;
     }
+
     &.playing {
       color: $logo-clr;
-      * {
-        color: $logo-clr;
+
+      .song-details {
+        p {
+          color: $logo-clr;
+        }
       }
-      .play-icon {
+
+      .play-icon,
+      .pause-icon,
+      .playing-icon {
         svg {
           fill: white;
         }
       }
-      svg {
-        fill: $logo-clr;
-      }
     }
+
     .song-title,
     .song-album,
     .song-date-added,
@@ -39,18 +44,19 @@
       text-overflow: ellipsis;
       white-space: nowrap;
     }
+
     .song-album,
     .song-date-added {
       display: none;
     }
 
     .song-duration {
-      text-align: right; // Aligns the duration to the right
-      padding-right: 10px; // Adds some padding to the right
+      text-align: right;
+      padding-right: 10px;
 
       svg {
-        width: em(16px); // Adjust icon size if necessary
-        height: em(16px); // Adjust icon size if necessary
+        width: 16px;
+        height: 16px;
         fill: #888;
       }
     }
@@ -58,9 +64,8 @@
 
   .song-header {
     color: #888;
-    font-size: em(12px);
+    font-size: 12px;
     font-weight: bold;
-    // border-bottom: 1px solid #888;
     padding-bottom: 10px;
     width: 100%;
 
@@ -75,7 +80,7 @@
     color: #fff;
     font-size: 14px;
     width: 100%;
-    border-radius: em(5px);
+    border-radius: 5px;
 
     .song-order-play {
       display: flex;
@@ -89,6 +94,7 @@
         font-size: 14px;
         color: #888;
       }
+
       .play-btn {
         display: none;
         justify-content: center;
@@ -98,8 +104,8 @@
         background-color: transparent;
 
         svg {
-          width: em(16px);
-          height: em(16px);
+          width: 16px;
+          height: 16px;
           fill: white;
           background-color: transparent;
         }
@@ -108,18 +114,22 @@
 
     &:hover {
       background-color: rgba(255, 255, 255, 0.1);
+
       .song-order-play {
         .song-order {
           display: none;
         }
       }
+
       .play-btn {
         display: block;
       }
     }
   }
+
   .song-container.active {
     background-color: #656465;
+
     .song-details {
       small {
         color: #fff;
@@ -134,6 +144,7 @@
     .song-container {
       grid-template-columns: 1fr 40% 8fr 8fr 8fr;
       gap: 10px;
+
       .song-album,
       .song-date-added {
         display: block;
