add style to ai-modal  and minor change in song container

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -66,3 +66,4 @@
 @import "cmps/StationsMenu.scss";
 @import "cmps/AddToStationButton.scss";
 @import "cmps/QueueMenu.scss";
+@import "cmps/AIModal.scss";
