--- a/src/assets/styles/cmps/AIModal.scss
+++ b/src/assets/styles/cmps/AIModal.scss
@@ -95,6 +95,7 @@ $transition-duration: 0.3s;
     width: 100%;
     height: 100%;
     background-color: $overlay-background;
+    border-radius: $border-radius;
     color: $primary-color;
     font-size: 18px;
     justify-content: center;
