all the player is saved to session storage (to survive refresh)

--- a/src/assets/styles/cmps/StationHeader.scss
+++ b/src/assets/styles/cmps/StationHeader.scss
@@ -146,6 +146,7 @@
           white-space: nowrap;
           overflow: hidden;
           text-overflow: ellipsis;
+          max-width: 80%;
         }
       }
     }
